// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`error distribution queries fetches an error distribution 1`] = `
Object {
  "body": Object {
    "aggs": Object {
      "distribution": Object {
        "histogram": Object {
          "extended_bounds": Object {
            "max": 1528977600000,
            "min": 1528113600000,
          },
          "field": "@timestamp",
          "interval": 57600000,
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "processor.event": "error",
            },
          },
          Object {
            "term": Object {
              "service.name": "serviceName",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "service.environment": "prod",
            },
          },
        ],
      },
    },
    "size": 0,
  },
  "index": "myIndex",
}
`;

exports[`error distribution queries fetches an error distribution with a group id 1`] = `
Object {
  "body": Object {
    "aggs": Object {
      "distribution": Object {
        "histogram": Object {
          "extended_bounds": Object {
            "max": 1528977600000,
            "min": 1528113600000,
          },
          "field": "@timestamp",
          "interval": 57600000,
          "min_doc_count": 0,
        },
      },
    },
    "query": Object {
      "bool": Object {
        "filter": Array [
          Object {
            "term": Object {
              "processor.event": "error",
            },
          },
          Object {
            "term": Object {
              "service.name": "serviceName",
            },
          },
          Object {
            "range": Object {
              "@timestamp": Object {
                "format": "epoch_millis",
                "gte": 1528113600000,
                "lte": 1528977600000,
              },
            },
          },
          Object {
            "term": Object {
              "service.environment": "prod",
            },
          },
          Object {
            "term": Object {
              "error.grouping_key": "foo",
            },
          },
        ],
      },
    },
    "size": 0,
  },
  "index": "myIndex",
}
`;
